--- a/backend/DB Setup.ipynb
+++ b/backend/DB Setup.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,19 +66,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': '987654321', 'clientID': '987654321', 'firstName': 'John', 'lastName': 'Doe', 'fullName': 'John Doe', 'dateOfBirth': '1980-01-01', 'nationality': 'Malaysia', 'contactDetails': {'email': 'john.doe@example.com', 'phone': '123-456-7890'}, 'address': {'street': '123 Main St', 'city': 'New York', 'state': 'NY', 'postalCode': '12345', 'country': 'USA'}, 'policies': [{'PolicyNo': 'A1234567', 'BasicPlanProduct': 'P230ZII', 'ProductType': 'Ztravel International', 'PolicyStatus': 'A', 'EffectiveDate': '2024-06-18 00:00:00.000', 'ExpiryDate': '2024-07-13 00:00:00.000', 'Overseas Medical Expenses': '500000', 'Follow up Treatment in Malaysia': '50000.0', 'Alternative Medicine': '500.0', 'Overseas Hospital Income': '15000.0', 'Child Care Benefit': '10000.0', 'Compassionate Visit': '10000.0', 'Emergency Medical Evacuation': 'Unlimited', 'Medical Repatriation': 'Unlimited', 'Repatriation of Mortal Remains': 'Unlimited'}, {'PolicyNo': 'B1234567', 'BasicPlanProduct': 'P230ZII', 'ProductType': 'Ztravel International Plus', 'PolicyStatus': 'A', 'EffectiveDate': '2024-06-18 00:00:00.000', 'ExpiryDate': '2024-07-13 00:00:00.000', 'Overseas Medical Expenses': '500000', 'Follow up Treatment in Malaysia': '50000.0', 'Alternative Medicine': '5000.0', 'Overseas Hospital Income': '15000.0', 'Child Care Benefit': '100000.0', 'Compassionate Visit': '10000.0', 'Emergency Medical Evacuation': 'Unlimited', 'Medical Repatriation': 'Unlimited', 'Repatriation of Mortal Remains': 'Unlimited'}, {'PolicyNo': 'C1234567', 'BasicPlanProduct': 'P045PSI', 'ProductType': 'Personal Accident', 'PolicyStatus': 'A', 'EffectiveDate': '2018-08-15 00:00:00.000', 'ExpiryDate': '2019-08-14 00:00:00.000', 'Overseas Medical Expenses': '500000', 'Follow up Treatment in Malaysia': '500000.0', 'Alternative Medicine': '5000.0', 'Overseas Hospital Income': '150000.0', 'Child Care Benefit': '100000.0', 'Compassionate Visit': '100000.0', 'Emergency Medical Evacuation': 'Unlimited', 'Medical Repatriation': 'Unlimited', 'Repatriation of Mortal Remains': 'Unlimited'}], '_rid': 'TJJPANstunIDAAAAAAAAAA==', '_self': 'dbs/TJJPAA==/colls/TJJPANstunI=/docs/TJJPANstunIDAAAAAAAAAA==/', '_etag': '\"1900162f-0000-4700-0000-6710b2d40000\"', '_attachments': 'attachments/', '_ts': 1729147604}\n"
+      "{'id': '123456', 'clientID': '123456', 'firstName': 'Pete', 'lastName': 'Mitchell', 'dateOfBirth': '1980-01-01', 'nationality': 'American', 'contactDetails': {'email': 'pete.mit@example.com', 'phone': '123-456-7890'}, 'address': {'street': '123 Main St', 'city': 'New York', 'state': 'NY', 'postalCode': '12345', 'country': 'USA'}, 'financialInformation': {'sourceOfWealth': 'Investments', 'netIncome': '150000', 'annualIncome': '200000', 'assets': {'realEstate': '500000', 'investments': '300000', 'cash': '100000'}}, 'investmentProfile': {'riskProfile': 'Aggressive', 'investmentObjectives': 'Growth', 'investmentHorizon': 'Long-term'}, 'portfolio': {'strategy': 'The portfolio focus on assets with higher growth potential, such as stocks in emerging industries or innovative companies. By emphasizing growth, investors accept greater risk but also seek higher returns.', 'riskProfile': 'Growth', 'performanceYTD': '12.3%', 'performanceSinceInception': '22.3%', 'inceptionDate': '12/07/2015', 'positions': [{'ticker': 'MSFT', 'companyName': 'Microsoft Corp', 'sector': 'Technology', 'industry': 'Software', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '350', 'units': '200'}, {'ticker': 'NVDA', 'companyName': 'NVIDIA Corp', 'sector': 'Technology', 'industry': 'Semiconductors', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '150', 'units': '150'}, {'ticker': 'AAPL', 'companyName': 'Apple Inc', 'sector': 'Technology', 'industry': 'Consumer Electronics', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '90', 'units': '100'}, {'ticker': 'AMZN', 'companyName': 'Amazon.com Inc', 'sector': 'Consumer Discretionary', 'industry': 'Internet & Direct Marketing Retail', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '150', 'units': '180'}, {'ticker': 'GOOGL', 'companyName': 'Alphabet Inc', 'sector': 'Communication Services', 'industry': 'Interactive Media & Services', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '125', 'units': '50'}, {'ticker': 'META', 'companyName': 'Facebook Inc / Meta', 'sector': 'Communication Services', 'industry': 'Interactive Media & Services', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '100', 'units': '50'}, {'ticker': 'JNJ', 'companyName': 'Johnson & Johnson', 'sector': 'Health Care', 'industry': 'Pharmaceuticals', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '100', 'units': '40'}, {'ticker': 'V', 'companyName': 'Visa Inc', 'sector': 'Financials', 'industry': 'IT Services', 'currency': 'USD', 'assetClass': 'Equity', 'type': 'Common Stock', 'average_cost': '78', 'units': '50'}]}, '_rid': 'TJJPANstunIEAAAAAAAAAA==', '_self': 'dbs/TJJPAA==/colls/TJJPANstunI=/docs/TJJPANstunIEAAAAAAAAAA==/', '_etag': '\"c0005ea6-0000-4700-0000-671636730000\"', '_attachments': 'attachments/', '_ts': 1729508979}\n"
      ]
     }
    ],
    "source": [
-    "print(db.get_customer_profile_by_client_id('987654321'))"
+    "print(db.get_customer_profile_by_client_id('123456'))"
    ]
   }
  ],
