vanilla framework upgrade + regression testing

--- a/backend/DB Setup.ipynb
+++ b/backend/DB Setup.ipynb
@@ -18,6 +18,7 @@
     "\n",
     "from azure.identity import DefaultAzureCredential\n",
     "from crm_store import CRMStore\n",
+    "from conversation_store import ConversationStore\n",
     "\n",
     "key = DefaultAzureCredential()\n",
     "db = CRMStore(\n",
@@ -25,7 +26,21 @@
     "        key=key,\n",
     "        database_name=os.getenv(\"COSMOSDB_DATABASE_NAME\"),\n",
     "        container_name=os.getenv(\"COSMOSDB_CONTAINER_CLIENT_NAME\")\n",
+    "    )\n",
+    "\n",
+    "db_user_bank = ConversationStore(\n",
+    "        url=os.getenv(\"COSMOSDB_ENDPOINT\"),\n",
+    "        key=key,\n",
+    "        database_name=os.getenv(\"COSMOSDB_DATABASE_NAME\"),\n",
+    "        container_name=os.getenv(\"COSMOSDB_CONTAINER_FSI_BANK_USER_NAME\")\n",
     "    )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### populate ins client in CRM from json file"
    ]
   },
   {
@@ -44,6 +59,13 @@
     "    print(f\"An unexpected error occurred: {e}\") \n",
     "\n",
     "db.create_customer_profile(ins_customer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### populate banking client in CRM from json file"
    ]
   },
   {
@@ -79,6 +101,23 @@
    ],
    "source": [
     "print(db.get_customer_profile_by_client_id('123456'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### wipe history of userId"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "userId = 'default_user_id'\n",
+    "db_user_bank.wipe_user_chats(userId)"
    ]
   }
  ],
